k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-app-ingress
  annotations:
    
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: springboot-app.test
    http:
      paths:
      - path: /greet
        pathType: Prefix
        backend:
          service:
            name: spring-boot-app-service
            port:
              number: 80
      - path: /time
        pathType: Prefix
        backend:
          service:
            name: spring-boot-app-service
            port:
              number: 80
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: spring-boot-app-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-boot-app-service
            port:
              number: 80
